<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#222222"
    tools:context=".TutorialActivity">




    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="32sp"
        android:background="#222222"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/tutorial_title"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/tut_image"
        android:layout_width= "match_parent"
        android:layout_marginTop="100px"
        android:layout_height="300dp"
        android:src="@drawable/block3"

        tools:ignore="MissingConstraints" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:id="@+id/intro_descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp"
        android:background="#222222"
        android:textColor="@color/white"
        android:text="@string/tutorial_intro"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp"
        android:background="#222222"
        android:textColor="@color/white"
        android:text="@string/tutorial_desc"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        android:layout_gravity="bottom">
        <Button
            android:id="@+id/prev"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/prev" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="10"/>

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>